Fixed broken styles for tooltips in the new appv1 / appv2 + classic sheet targeting world.
Generalized a document list summary tooltip class for sharing between group languages and attunement tracker.

Added group languages tooltip and set up to show when hovering over a language tag.

Added a Tooltip controller class to help with ensuring all clases are included when showing a tooltip.

--- a/src/tooltips/tooltips.scss
+++ b/src/tooltips/tooltips.scss
@@ -1,4 +1,4 @@
-.attunement-summary-tooltip {
+.document-list-summary-tooltip {
   ul {
     margin: 0;
     padding: 0;
